convert java 25 primitive patterns to executable example